--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,29 @@
+name: 刷课
+ 
+on: 
+  push:
+    branches: [ main ]
+  #是否开始每天8点定时刷课，若要开启请把下面两行注释去掉
+  schedule:
+    - cron: "0 8 * * *" 
+    
+jobs: 
+  Start:
+    runs-on: ubuntu-latest # 在最新版本的 Ubuntu 操作系统环境下运行
+    steps: # 要执行的步骤
+      - name: 拷贝代码
+        uses: actions/checkout@v3  # 用于将github代码仓库的代码拷贝到工作目录中
+ 
+      - name: 设置python环境
+        uses: actions/setup-python@v2 # 用于设置 Python 环境，它允许你指定要在工作环境中使用的 Python 版本
+        with:
+          python-version: '3.10'  # 选择要用的Python版本
+ 
+      - name: 安装依赖包
+        run: | # 安装依赖包
+          pip install -r ./requirements.txt 
+          
+      
+      - name: Run main.py
+        run: python main.py -u 18161252702 -p zwhy672995496 -l 256422920 #课程id，默认为心理课的
 
